[package]
name = "yewtil"
version = "0.1.1"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"
description = "Utility crate for Yew"
license = "MIT/Apache-2.0"
repository = "https://github.com/yewstack/yewtil"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Only stable is included by default.
default = ["stable"]
# Broad features
all = ["stable", "experimental"]
## These all features MUST be stable or experimental
stable = ["neq", "pure", "history", "mrc_irc"]
experimental = ["dsl", "lrc", "with_callback" ]


# Some pointers are stable, some experimental.
# This makes sure you get all the pointers
ptr = ["lrc", "mrc_irc"]

# Misc features
neq = []
pure = ["neq", "yewtil-macro"]
with_callback = []
history = []
dsl = []

# Ptr features
lrc = []
mrc_irc = []

[dependencies]
#yew = { git = "https://github.com/yewstack/yew", branch="master" }
yew = "0.10.0"
yewtil-macro = {path = "crates/yewtil-macro", version="0.1.0", optional=true}
log = "0.4.8"
failure = "0.1.6"


[workspace]
members = [
    "crates/yewtil-macro",
    "examples/pure_component",
#    "examples/fetch_demo",
    "examples/dsl",
    "examples/lrc",
    "examples/history",
    "examples/mrc_irc"
]
